--- a/Fundamental/text/text_src/script.tex
+++ b/Fundamental/text/text_src/script.tex
@@ -1,14 +1,14 @@
 \section{Intro}
-I was given to process chapter 12 and chapter 13 from Smolin's book. First of the chapters is titled as \q{\textit{Quantum Mechanics and the Liberation of the Atom}}, while the second one is \q{\textit{The Battle Between Relativity and the Quantum}}.
+I was given to process chapter 12 and chapter 13 from Smolin's book. First of these two chapters is titled as \q{\textit{Quantum Mechanics and the Liberation of the Atom}}, while the second one is \q{\textit{The Battle Between Relativity and the Quantum}}.
 
 \section{Summary}
 Just for some clarification and to make it easier to understand and comprehend what I'm going to talk about, I wanted to share some of my insights/remarks on the idea proposed in Smolin's book in general and in these two chapters. But first I would like to give a summary and explanation of this - according to Smolin - \q{revolutionary idea}, and how these chapters are connected to it. \newline
 So, in the book Smolin speaks about a lot of things in particular -- lot of physical theories and methods --, and explains why does he think they're incorrect. But there is a single, fundamental idea, which all these topics are wrapped around. And it is that \q{\textit{Time is real}} as he says, and he continuously repeats this short phrase throughout the whole book. But what does he mean by this? \newline
 Smolin declares, that science's current view on time itself and how science handles it, is incorrect. Some \q{background infos}: the concept of time in modern physics originates from Einstein's theory of relativity. In this framework space and time is merged into one entity which is called as \q{spacetime}. Like this, time simply ceases to exist as an individual quantity, but rather becomes a coordinate, just like the coordinates of space itself in geometry. Of course, this could be rephrased negatively as \q{time gets downgraded}, and \q{space becomes fundamental} or \q{space becomes real}, while \q{time ceases to exist as real}, because the behaviour of time is now simply defined as space's does. This is the concept, which Smolin criticizes and which - according to Smolin - makes us a lot of troubles in physics. He proposes we should make it the other way around. To consider time as \q{real} and space maybe just as an other aspect of it. \par
-In Chapter 12 he discusses QM. He argues, that it isn't the correct theory and it should be succeeded by something else, which is supposedly consistent with his concept of \q{real time}. In chapter 13 blabla.
+In Chapter 12 he discusses QM. He argues, that it isn't the correct theory and it should be succeeded by something else, which is supposedly consistent with his concept of \q{real time}. In chapter 13 he goes further into this stream of thoughts and tries to give a more detailed version of the theory, which could replace QM.
 
 \section{My own insights}
-I must confess, I love these kind of books and writings, where the author tries to answer fundamental questions by analysing the bigger picture and the small details simultaneously. Another popular contemporary author, Yuval N. Harari writes in seemingly the same manner, as Smolin does -- or at least this book was reminiscent of his style. But I had the same problem with both authors, which strongly influenced me and also influences me currently in the manner of my discussion about Smolin's work during this presentation. (That's the only reason why I'm mentioning these thoughts.) I have a strong feeling, that first of all, both of these authors try to convey/broadcast a narrative to the audience. But while they're doing so, they also try to give the appearance of having a powerful argument supporting their conveyed narrative. Doing this by actually cherry picking small details from pretty obscure and unclear topics, declaring, that \q{this unknown something} implies the rightness of their idea. I'm literally no one to criticize anyhow the scientific work of Lee Smolin a researcher of loop quantum-gravity, but this kind of discussion tasted unpleasantly \q{pseudoscience-y} to me. That's why both Smolin and Harari fails to convince me about, that their ideas are outstanding somehow. \par
+I must confess, I love these kind of books and writings, where the author tries to answer fundamental questions by analysing the bigger picture and the small details simultaneously. Another popular contemporary author, Yuval N. Harari writes in seemingly the same manner, as Smolin does -- or at least this book was reminiscent of his style. But I had the same problem with both authors, which strongly influenced me and also influences me currently in the manner of my discussion about Smolin's work during this presentation. (That's the only reason why I'm mentioning these thoughts.) I have a strong feeling, that first of all, both of these authors try to convey/broadcast a narrative to the audience. But while they're doing so, they also try to give the appearance of having a powerful argument supporting their conveyed narrative. Doing this by actually cherry picking small details from pretty obscure and unclear topics, declaring, that \q{this unknown something} implies the rightness of their idea. I'm literally no one to criticize anyhow the scientific work of Lee Smolin a researcher of loop quantum-gravity, but this kind of discussion tasted unpleasantly \q{pseudoscience-y} to me. That's why both Smolin and Harari fails to convince me about, that their ideas are outstanding in any way. \par
 Of course we can ask ourselves the question: does it actually matter? I think it's not just simply appropriate, I think it's significantly important to share different narratives, thoughts and ideas with the world. We can learn anything about others and ourselves -- as humans -- by listening to these ideas, and we can never be sure, when one of this idea could become the new theory of relativity. If that's the only goal of this book, then I'm impressed, it's a great work actually. But it is not so great to claim anything more on behalf of an idea, what it actually has to offer. Smolin actually doesn't claim that his theory is correct -- since no experiment supports it -- but he claims that it could revolutionize our perspective on a lot of things, eg. physics, economics, social problems, etc... And I just can't see anything, which supports this pretty monumental claim. \par
 That was my thoughts, now move onto discussing the chapters.
 
@@ -21,6 +21,17 @@ So, what problems Smolin found in QM? He enumerates exactly three of them:
 	\item Its failure to predict the exact outcome of experiments. (That's also true, QM gives us only probabilities about the things which could happen.)
 	\item Its failure to incorporate the measuring instruments, observers, etc. into the theory. (If our goal is to create a cosmological/final model, that's of course a serious problem. It's supposed to describe everything.)
 \end{enumerate}
-After this, Smolin describes three well-known problems in QM, which still lacks of explanation. These are the problem of noncommuting variables (why we can't measure the position and momentum of a particle at the same time?), the entanglement (what does happen, when two particles get entangled?) and nonlocality (how does two, entangled particle act on each other instantaneously, even if they're far away?). I won't speak more about this. \par
-To resolve this problem, Smolin proposes, what if our world is a subject to the principle of precedence, instead of timeless laws? The difference between these two is, that according to the principle of precedence, the outcome of experiments, or events are determined by the outcomes of the same particular events in the past. However according the the \q{principle of timeless laws}, all physical laws are created at the Big Bang, and thus the outcome of every unprecedented event could be predicted simply by knowing these laws. If the principle of precedence is true, it means, that in every experiment, where an unprecedented event about to happen, the particles are \q{free to choose} the outcome and we can't do anything to predict that. That's the liberation of the atom as stands in the title. \par
-According to Smolin, QM also follows the \textit{principle of maximal freedom}. A particle tries to maximize its freedom (the number of informations, which is needed to predict anything about its properties).
+After this, Smolin describes three well-known problems in QM, which still lacks of explanation. These are the problem of noncommuting variables (why we can't measure the position and momentum of a particle at the same time?), the entanglement (what does happen, when two particles get entangled?) and nonlocality (how does two, entangled particle act on each other instantaneously, even if they're far away?). I won't elaborate on the details of these. \par
+To resolve this problem, Smolin proposes, what if our world is a subject to the principle of precedence, instead of timeless laws? The difference between these two is, that according to the principle of precedence, the outcome of experiments, or events are determined by the outcomes of the same particular events in the past. These past events creates distribution of the possible outcomes, and all subsequent events simply use it as a sampling distribution to choose their outcomes. However according the the \q{principle of timeless laws}, all physical laws are created at the Big Bang, and thus the outcome of every, even unprecedented event could be predicted simply by knowing these laws. If the principle of precedence is true, it means, that in every experiment, where an unprecedented event about to happen, the particles are \q{free to choose} the outcome and we can't do anything to predict that. That's the liberation of the atom as stands in the title. \par
+Using the work of some mathematicians and researcher, like John Conway and Simon Kochen, Lucien Hardy, Lluís Masanes and Markus Müller he postulates another quantity, the \q{freedom of particles}. He writes the following: \q{The more things you need to measure about a system before you can make the best possible predictions, the more freedom it has.} According to Smolin, QM also follows the \textit{principle of maximal freedom}. A particle tries to maximize its freedom (which Smolin defines as the number of informations, which is needed to predict anything about its future). He concludes the chapter by the statement, that this picture does not satisfy the principle of sufficient reason -- which he will elaborate on the next chapter -- but this concept is still -- as he says -- \q{capable of inspiring new ideas and driving a robust research program}.
+
+\section{Chapter 13}
+This chapter is divided into 3 parts and an epilogue/conclusion. The first part raises the problem, which will be discussed in the chapter. The second part describes, why we need to resolve this problem and what . Just like the previous chapter -- however more loosely --, but this one also revolves around a principle, the principle of sufficient reason in particular. It declares that there should be a rational reason for every choice that nature makes. Smolin contemplates on the troubles regarding this principle. If we give particles some kind of freedom -- as we talked about in the previous chapter -- we simply lose the possibility to discover some reason behind why the particle did choose a specific outcome of an experiment. We can't say anything about that, because that would violate the freedom of the particle. However if we want to extend QM to cosmological levels -- which is currently ruled by the theory of relativity -- we need the principle of sufficient reason. How can we resolves this? Is there some kind of hidden variable model? Is QM only an approximation of a subsystem of the universe? The search continues, and he concludes the first part of the chapter. \par
+In the second part I think he makes a valid point. He criticizes, that a lot if researchers \q{downgrade} physics, by being satisfied with the fact, that QM is only a \q{language} to describe our informations of the quantum world. Instead of trying to find a theory, which could not just describe, but sufficiently interpret, physically our observations. He think it is important to create a theory like this, since only a theory like this could be extended to cosmological levels. And I think that's a completely fair point. A final, complete physical theory should be able to tell us, what exactly happens in an experiment besides its mathematical formulation. \newline
+In this second part he also tell us a little bit about the history of hidden variable models, proposed by de Broglie and Bohm. I won't go into details, but it basically says, that there the particle and the wave form exist simultaneously, and always the wave tells the particle, where it needs to go. And if we know the exact starting point of the particle we can also predict its future location, but this starting point is always \q{hidden} from us. Smolin tells us, that there is a flaw in this theorem: actions here are not reciprocal. \par
+In the last part he proposes one of the variations of hidden variable models. And that's where the real craziness begins. He talks about the ensemble interpretation of QM. It postulates, that we should describe an ensemble/collection of particles instead of individual ones. So, what does it mean? If we measure eq. the position of the electron orbiting around a single proton, we actually sample the position of the electron from an ensemble of hydrogen atoms. Smolin proposes, what if this ensemble is actually all the similar hydrogen atoms in the universe. And if we measure one of them, they're all communicating somehow and we could measure only the distribution of this ensemble. We can even extend this to macroscopic scales! The reason why we don't experience this probabilistic nature of QM in our life, because macroscopic objects are unique. There is no ensemble for any macroscopic objects. Our measurement will be always real. But this theory violates relativity, because information travels faster, than light between atoms in the ensemble. \par
+In the conclusion of the chapter Smolin says, that sadly there is no hidden variable model, which is compatible with relativity. The title of the chapter implies this \q{battle} between relativity and quantum. He concludes the chapter with a very obscure conclusion. Smolin declares, that there is a solution, which is, that maybe Einstein, Newton and Galilei was wrong, and Aristotle was right, by saying, that motion is absolute or we can accept that QM is the final theory and there is no escape from its statistical description of our universe.
+
+\section{Final remarks}
+I actually told my remarks on this book and Smolin's ideas. I think, the has some fair points. I like, that he tries to solve actual problems by unorthodox methods. But it still tasted pseudoscience. \par
+Now thank you for your attention.
