--- a/Fundamental/text/text_src/script.tex
+++ b/Fundamental/text/text_src/script.tex
@@ -9,20 +9,20 @@ In Chapter 12 he discusses QM. He argues, that it isn't the correct theory and i
 
 \section{My own insights}
 I must confess, I love these kind of books and writings, where the author tries to answer fundamental questions by analysing the bigger picture and the small details simultaneously. Another popular contemporary author, Yuval N. Harari writes in seemingly the same manner, as Smolin does -- or at least this book was reminiscent of his style. But I had the same problem with both authors, which strongly influenced me and also influences me currently in the manner of my discussion about Smolin's work during this presentation. (That's the only reason why I'm mentioning these thoughts.) I have a strong feeling, that first of all, both of these authors try to convey/broadcast a narrative to the audience. But while they're doing so, they also try to give the appearance of having a powerful argument supporting their conveyed narrative. Doing this by actually cherry picking small details from pretty obscure and unclear topics, declaring, that \q{this unknown something} implies the rightness of their idea. I'm literally no one to criticize anyhow the scientific work of Lee Smolin a researcher of loop quantum-gravity, but this kind of discussion tasted unpleasantly \q{pseudoscience-y} to me. That's why both Smolin and Harari fails to convince me about, that their ideas are outstanding in any way. \par
-Of course we can ask ourselves the question: does it actually matter? I think it's not just simply appropriate, I think it's significantly important to share different narratives, thoughts and ideas with the world. We can learn anything about others and ourselves -- as humans -- by listening to these ideas, and we can never be sure, when one of this idea could become the new theory of relativity. If that's the only goal of this book, then I'm impressed, it's a great work actually. But it is not so great to claim anything more on behalf of an idea, what it actually has to offer. Smolin actually doesn't claim that his theory is correct -- since no experiment supports it -- but he claims that it could revolutionize our perspective on a lot of things, eg. physics, economics, social problems, etc... And I just can't see anything, which supports this pretty monumental claim. \par
+Of course we can ask ourselves the question: does it actually matter? I think it's not just simply appropriate, I think it's significantly important to share different narratives, thoughts and ideas with the world. We can learn anything about others and ourselves -- as humans -- by listening to these ideas, and we can never be sure, when one of these ideas could become the new theory of relativity. If that's the only goal of this book, then I'm impressed, it's a great work actually. But it is not so great to claim anything more on behalf of an idea, what it actually has to offer. Smolin actually doesn't claim that his theory is correct -- since no experiment supports it -- but he claims that it could revolutionize our perspective on a lot of things, eg. physics, economics, social problems, etc... And I just can't see anything, which supports this pretty monumental claim. \par
 That was my thoughts, now move onto discussing the chapters.
 
 
 \section{Chapter 12}
-This chapter completely revolves around the so-called \textit{principle of precedence}. Smolin first enlightens the reader why he thinks, that QM is not a final theory, while pointing out some fundamental flaws in the scientific method of the QM itself. (I'll tell you in a minute, what are these exactly.) He also draws parallel between two pair of theories: Newton's theory of gravitation and its successor, the theory of general relativity, and quantum mechanics and its hypothetical successor, some improved, \q{final} theory. He then details, that this theory should use the principle of precedence, which in a philosophical sense, incorporates his \q{time is real} theory. \par
+Again, first a summary of Ch. 12. This chapter completely revolves around the so-called \textit{principle of precedence}. Smolin first enlightens the reader why he thinks, that QM is not a final theory, while pointing out some fundamental flaws in the scientific method of the QM itself. (I'll tell you in a minute, what are these exactly.) He also draws parallel between two pairs of theories: Newton's theory of gravitation and its successor, the theory of general relativity, and quantum mechanics and its hypothetical successor, some improved, \q{final} theory. He then details, that this theory should use the principle of precedence, which in a philosophical sense, incorporates his \q{time is real} theory. \par
 So, what problems Smolin found in QM? He enumerates exactly three of them:
 \begin{enumerate}
 	\item Its failure to give a physical picture of our world. (That's true, QM is mostly abstract math with a lot of uninterpretable notions or incomprehensible explanations.)
 	\item Its failure to predict the exact outcome of experiments. (That's also true, QM gives us only probabilities about the things which could happen.)
 	\item Its failure to incorporate the measuring instruments, observers, etc. into the theory. (If our goal is to create a cosmological/final model, that's of course a serious problem. It's supposed to describe everything.)
 \end{enumerate}
-After this, Smolin describes three well-known problems in QM, which still lacks of explanation. These are the problem of noncommuting variables (why we can't measure the position and momentum of a particle at the same time?), the entanglement (what does happen, when two particles get entangled?) and nonlocality (how does two, entangled particle act on each other instantaneously, even if they're far away?). I won't elaborate on the details of these. \par
-To resolve this problem, Smolin proposes, what if our world is a subject to the principle of precedence, instead of timeless laws? The difference between these two is, that according to the principle of precedence, the outcome of experiments, or events are determined by the outcomes of the same particular events in the past. These past events creates distribution of the possible outcomes, and all subsequent events simply use it as a sampling distribution to choose their outcomes. However according the the \q{principle of timeless laws}, all physical laws are created at the Big Bang, and thus the outcome of every, even unprecedented event could be predicted simply by knowing these laws. If the principle of precedence is true, it means, that in every experiment, where an unprecedented event about to happen, the particles are \q{free to choose} the outcome and we can't do anything to predict that. That's the liberation of the atom as stands in the title. \par
+After this, Smolin describes three well-known problems in QM, which still lacks of explanation. These are the problem of noncommuting variables (why we can't measure the position and momentum of a particle at the same time?), the entanglement (what does happen, when two particles get entangled?) and nonlocality (how does two entangled particles act on each other instantaneously, even if they're far away?). I won't elaborate on the details of these. \par
+To resolve this problem, Smolin proposes, what if our world is a subject to the principle of precedence, instead of timeless laws? Okay, what do they mean? The difference if the following. According to the the \q{principle of timeless laws} -- which we currently build physics upon -- all physical laws are created at the Big Bang, and thus the outcome of every, even unprecedented event could be predicted simply by knowing these laws. However according to the principle of precedence, the outcome of experiments, or events are determined by the outcomes of the same particular events in the past. These past events creates a distribution of the possible outcomes, and all subsequent events simply use it as a sampling distribution to choose their outcomes from. If the principle of precedence is true, it means, that in every experiment, where an unprecedented event about to happen, the particles are \q{free to choose} the outcome and we can't do anything to predict that. That's the liberation of the atom as stands in the title. \par
 Using the work of some mathematicians and researcher, like John Conway and Simon Kochen, Lucien Hardy, Lluís Masanes and Markus Müller he postulates another quantity, the \q{freedom of particles}. He writes the following: \q{The more things you need to measure about a system before you can make the best possible predictions, the more freedom it has.} According to Smolin, QM also follows the \textit{principle of maximal freedom}. A particle tries to maximize its freedom (which Smolin defines as the number of informations, which is needed to predict anything about its future). He concludes the chapter by the statement, that this picture does not satisfy the principle of sufficient reason -- which he will elaborate on the next chapter -- but this concept is still -- as he says -- \q{capable of inspiring new ideas and driving a robust research program}.
 
 \section{Chapter 13}
